# samfanapp

./: .gitignore
backend/: db.sqlite3  pyproject.toml
backend/authentication/: serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/carts/: models.py  serializers.py  views.py
backend/carts/migrations/: 0001_initial.py  0002_initial.py  0003_cartitem_note.py  0004_alter_cartitem_quantity.py  0005_alter_cartitem_note.py  0006_alter_cartitem_quantity.py
backend/convert/: urls.py  views.py
backend/orders/: filters.py  models.py  serializers.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_initial.py  0003_orderitem_note.py  0004_order_pickup_date.py  0005_alter_order_sales_period.py  0006_remove_order_pickup_date_order_shipped_at_and_more.py  0007_alter_order_status.py  0008_orderitem_is_prepared.py  0009_order_pickup_date.py  0010_alter_order_box_number.py
backend/products/: models.py  views.py
backend/products/migrations/: 0001_initial.py  0002_product_img.py  0003_product_is_active.py  0004_alter_product_quantity.py  0005_alter_product_price.py  0006_remove_product_price_remove_product_quantity.py
backend/sales_periods/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/sales_periods/migrations/: 0001_initial.py  0002_rename_end_eate_salesperiod_end_date.py  0003_remove_salesperiod_status.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
client/: app.json  eas.json  package-lock.json  package.json
(+66 files in other folders)
